--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,17 +1,35 @@
 @font-face {
-    font-family: roboto;
+    font-family: plexmono;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 400;
     font-display: swap;
-    src: url('../fonts/roboto-bold.woff2') format('woff2');
+    src: url('../fonts/IBMPlexMono-Regular.ttf') format('ttf');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
   
   @font-face {
-    font-family: roboto;
+    font-family: inter-normal;
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url('../fonts/roboto-regular.woff2') format('woff2');
+    src: url('../fonts/Inter-Regular.woff2') format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  }
+
+  @font-face {
+    font-family: inter-light;
+    font-style: light;
+    font-weight: 300;
+    font-display: swap;
+    src: url('../fonts/Inter-Light.woff2') format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  }
+
+  @font-face {
+    font-family: inter-bold;
+    font-style: bold;
+    font-weight: 700;
+    font-display: swap;
+    src: url('../fonts/Inter-Bold.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
