--- a/styles/styles.css
+++ b/styles/styles.css
@@ -259,3 +259,17 @@ main .section {
 main .section.highlight {
   background-color: var(--highlight-background-color);
 }
+
+/* ------------- animations ------------- */
+
+/* fade up animation */
+.fadeup {
+  transition: all 1s ease;
+  transform: translateY(30px);
+  opacity: 0;
+}
+
+.in-view {
+  transform: none;
+  opacity: 1;
+}
