adding in code block
for highlighting using highlightjs

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -273,3 +273,9 @@ main .section.highlight {
   transform: none;
   opacity: 1;
 }
+
+
+/* ------------- custom ------------- */
+.azul {
+  color: #035fe6;
+}
