--- a/blocks/code/code.css
+++ b/blocks/code/code.css
@@ -8,6 +8,6 @@
 
 .code > div.code-header > span {
   text-transform: capitalize;
-  background-color: rgba(255, 188, 2, 0.429);
+  background-color: color(255, 188, 2, 0.43);
   padding: 2px;
 }
