--- a/blocks/code-simple/code-simple.css
+++ b/blocks/code-simple/code-simple.css
@@ -13,19 +13,19 @@
   display: block;
 }
 
-.code-simple.line-numbers code span:before {
+.code-simple.line-numbers code span::before {
   counter-increment: line;
   content: counter(line);
   display: inline-block;
   padding: 0 .5em 0 0;
   margin-right: .5em;
-  color: rgba(0 0 0 / 0.2);
-  border-right: 1px solid rgba(0 0 0 / 0.2);
+  color: rgba(0 0 0 / 20%);
+  border-right: 1px solid rgba(0 0 0 / 20%);
   min-width: 2em;
   text-align: right;
 }
 
-.code-simple.line-numbers.dark code span:before {
-  color: rgba(255 255 255 / 0.2);
-  border-right: 1px solid rgba(255 255 255 / 0.2);
+.code-simple.line-numbers.dark code span::before {
+  color: rgba(255 255 255 / 20%);
+  border-right: 1px solid rgba(255 255 255 / 20%);
 }
