--- a/blocks/codepen/codepen.css
+++ b/blocks/codepen/codepen.css
@@ -1,5 +1,4 @@
-/* stylelint-disable-line selector-class-pattern */
-.cp_embed_wrapper {
+.cp_embed_wrapper { /* stylelint-disable-line selector-class-pattern */
   margin: 1em 0;
 }
 
