--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,10 +4,26 @@ footer {
 }
 
 footer .footer {
-  max-width: 1200px;
-  margin: auto;
+  max-width: 600px;
+  margin: 0 50% 0 auto;
 }
 
 footer .footer p {
-  /* margin: 0; */
+  margin: 8px 0;
+}
+
+footer .color-light {
+  color: var(--color-light);
+}
+
+/* i want the last div of .text */
+footer .footer .text:last-child {
+  margin-top: 2em;
+  font-size: small;
+}
+
+@media screen and (max-width: 600px) {
+  footer .footer {
+    margin: 0 auto;
+  }
 }
